@@ -103,6 +103,7 @@ public slots:
 	* @param text the text that is displayed in the statusbar
 	*/
 	void slotCancelAllCommands ();
+	void configureCarbonCopy ();
 	void slotSetStatusBarText (const QString &text);
 /** Basically a shortcut to slotSetStatusBarText (QString::null). Needed as a slot without parameters. */
 	void slotSetStatusReady () { slotSetStatusBarText (QString::null); };
