@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui>
-<kpartgui name="rkward_main" version="561">
+<kpartgui name="rkward_main" version="562">
 <MenuBar>
 	<!-- The Main Window ui.rc is the only one, where merging happens, reliably. That is, why we need to define
 	     a lot of merge points, here, which can then be used be mdi windows and their children.
@@ -55,6 +55,8 @@
 		<DefineGroup name="run_actions_merge" append="run_actions_merge"/>
 		<DefineGroup name="postrun_actions_merge" append="postrun_actions_merge"/>
 		<Action name="cancel_all_commands"/>
+		<Separator />
+		<Action name="carbon_copy"/>
 	</Menu>
 	
 	<Merge name="rkwardcomponents" />
